Added DFS and BFS implementations

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <title></title>
   </head>
   <body>
-    <h1>j</h1>
+    <h1>test</h1>
     <script src="js/reload/reload.js"></script>
     <script src="js/data-structures/graph.js"></script>
     <script src="js/data-structures/queue.js"></script>
-    <script src="js/breadth-first-search.js" charset="utf-8"></script>
+    <script src="js/ground-test.js" charset="utf-8"></script>
   </body>
 </html>
